--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AutoForest</title>
+    <link rel="stylesheet" href="style.css">
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBsHiVQP-LoPUsQ17vn_HQ3dSUHI1-xPg&callback=initMap" async defer></script>
+
+    <!-- Import React/Vite Bundle -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
+</head>
+
+<body>
+    <!-- React App Container -->
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+    
+</body>
+
 </html>
